Fixed spacing of contact page

--- a/src/index.css
+++ b/src/index.css
@@ -353,5 +353,5 @@ h4 {
 }
 
 .spacing {
-  margin: 25em 0 25em 0;
+  margin: 10em 0 10em 0;
 }
